--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.3.1
 apturl==0.5.2
 asn1crypto==0.24.0
+attrs==19.3.0
 bcrypt==3.1.7
 beautifulsoup4==4.8.1
 blinker==1.4
 Brlapi==0.6.7
+cached-property==1.5.1
 certifi==2018.8.24
 cffi==1.13.2
 chardet==3.0.4
@@ -16,6 +18,11 @@ cupshelpers==1.0
 defer==1.0.6
 distro==1.3.0
 distro-info===0.21ubuntu2
+docker==3.4.1
+docker-compose==1.21.0
+docker-pycreds==0.3.0
+dockerpty==0.4.1
+docopt==0.6.2
 entrypoints==0.3
 fido2==0.7.3
 filelock==3.0.12
@@ -30,6 +37,7 @@ idna==2.6
 importlib-metadata==1.3.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jsonschema==2.6.0
 keyring==17.1.1
 keyrings.alt==3.1.1
 language-selector==0.1
@@ -63,6 +71,7 @@ pyOpenSSL==19.0.0
 pyparsing==2.4.5
 pyRFC3339==1.1
 pyscard==1.9.7
+pytest==5.3.2
 python-apt==1.8.4
 python-dateutil==2.7.3
 python-debian==0.1.34
@@ -82,6 +91,7 @@ SQLAlchemy==1.3.11
 ssh-import-id==5.7
 system-service==0.3
 systemd-python==234
+texttable==1.6.0
 toml==0.10.0
 tox==3.14.2
 tox-travis==0.12
@@ -93,6 +103,8 @@ urllib3==1.24.1
 usb-creator==0.3.3
 virtualenv==16.7.8
 wadllib==1.3.3
+wcwidth==0.1.7
+websocket-client==0.53.0
 Werkzeug==0.16.0
 WTForms==2.2.1
 xkit==0.0.0
